<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="3dp"
    android:paddingRight="10dp"
    android:minHeight="32dp"
    >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/supplierDate"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/orderNumber"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/supplier"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="@color/light_red"
            />

        <LinearLayout
            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/ll_hint">
            <TextView
                android:id="@+id/hintpck_4"
                android:layout_width="wrap_content"
                android:text="@string/lotno"
                android:textSize="@dimen/text_15"
                android:layout_height="wrap_content"
                android:textColor="@color/light_red"
                />
            <TextView
                android:id="@+id/hintpck_5"
                android:layout_width="wrap_content"
                android:text="消費期限"
                android:textSize="@dimen/text_15"
                android:layout_height="wrap_content"
                android:textColor="@color/light_red"
                />
            <TextView
                android:id="@+id/hintpck_6"
                android:layout_width="wrap_content"
                android:text="返品区分"
                android:textSize="@dimen/text_15"
                android:layout_height="wrap_content"
                android:textColor="@color/light_red"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        >

        <TextView
            android:id="@+id/pck_0"
            android:textSize="@dimen/text_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:id="@+id/pck_1"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:id="@+id/pck_2"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:id="@+id/pck_3"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_pack"
            android:visibility="gone">
        <TextView
            android:id="@+id/pck_4"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:id="@+id/pck_5"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:id="@+id/pck_6"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>