<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:minHeight="32dp"
    >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/barcode"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:layout_width="wrap_content"
            android:text="品名"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/productCode"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="ロケー"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/pck_0"
            android:textSize="@dimen/text_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:id="@+id/pck_1"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />

        <TextView
            android:id="@+id/pck_2"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:id="@+id/pck_3"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
        <TextView
            android:id="@+id/pck_4"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            />
    </LinearLayout>
</LinearLayout>