<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_listdialog"
        android:layout_width="match_parent"
        android:layout_height="180dp"
         android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplierDate"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/orderNumber"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/supplier"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/quantity"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="ロット"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="消費期限"
                    android:textColor="@color/Redcolor"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pck_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/pck_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/pck_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/pck_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/pck_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/pck_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/base" />

</LinearLayout>