<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_arrival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wallpaper"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wallpaper"
        android:orientation="vertical"
        android:weightSum="100">

        <com.itechvision.ecrobo.pickman.Util.ActionBar
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </com.itechvision.ecrobo.pickman.Util.ActionBar>

        <RelativeLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actionbar"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="97dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/textlabel_bg"
                        android:text="@string/orderId"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/orderid"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/basic_edittext_off_nopadding"
                        android:editable="false"
                        android:inputType="none"
                        android:maxLength="100"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="97dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/textlabel_bg"
                        android:text="@string/trackingNumber"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/trackingno"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/basic_edittext_off_nopadding"
                        android:editable="false"
                        android:inputType="none"
                        android:maxLength="100"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/showkeyboard"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:background="@drawable/gray_button_background"
                        android:id="@+id/add_layout"
                        android:onClick="AddLayout"
                        tools:ignore="OnClick"
                        android:visibility="gone"
                        />

                    <Button
                        android:id="@+id/enter"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/packing_btn"
                        android:text="@string/submit"
                        android:textColor="@color/black"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:id="@+id/layout_number"
            android:visibility="visible"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>